--- a/.github/workflows/build_docker.yml
+++ b/.github/workflows/build_docker.yml
@@ -39,7 +39,8 @@ jobs:
             ${{ matrix.UBUNTU_VERSION == '24.04' && 'fripside2021/my-dev:latest' || '' }}
             fripside2021/my-dev:${{ matrix.ARCH }}-${{ matrix.UBUNTU_VERSION }}
           platforms: |
-            linux/${{ matrix.ARCH == 'arm64v8' && 'arm64' || 'amd64' }} 
+            ${{ matrix.ARCH == 'arm64v8' && 'linux/arm64' || '' }}
+            ${{ matrix.ARCH == 'amd64' && 'linux/amd64' || ''}}
           build-args: |
             UBUNTU_VERSION=${{ matrix.UBUNTU_VERSION }}
             ARCH=${{ matrix.ARCH }}
